# sidecar

./: .gitignore  .sidecar  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
examples/: sidecar-merge.yml
src/: cli.ts  redaction.ts
src/sidecar/: cli.py
tests/: cli.test.ts  integration.test.ts  test_cli.py
