[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "git-sidecar"
version = "0.1.0"
description = "A Git-backed sidecar inbox for repo-local development metadata."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Zack Story" }]

[project.scripts]
sidecar = "sidecar.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
